# Yojna

./: .gitignore
backend/: .coverage  .env.example  compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02507f8d6d6b_updated_event_and_entries.py  2419fb468a70_create_user_table.py  3d300907cfb2_updated_event_end_at_field.py  5dea8c7c2cbe_create_user_table.py  649066688829_added_relationship_cascade_delete.py  739cb0ea5e39_flattned_out_the_events.py  81b0c40937e3_updated_relationship_in_entries.py  81f474b6145d_added_validation_to_events_rrule.py  8407bb2b9d74_updated_entry_create.py  88a84aed9a58_added_event_and_entries_table.py  8c9fb8a3ca4d_field_s_in_events.py  9566f142003b_added_events.py  a21b80ebcf5b_updated_entry_create.py  bb72307779fd_revision.py  bc4c4687c338_added_event_table.py  c723a77187d2_added_unique_constraint.py  fe620b3b89d9_initial.py
backend/app/: crud.py  main.py  models.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: entries.py  events.py  login.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_entries.py  test_events.py  test_login.py  test_users.py
backend/tests/utils/: events.py  user.py  utils.py
frontend/: app.json  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: _layout.tsx  index.tsx
frontend/src/app/(app)/: _layout.tsx  home.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/services/: auth.ts
frontend/src/storage/: secureStorage.ts
(+7 files in other folders)
