[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "emails>=0.6",
    "fastapi[standard]>=0.135.1",
    "jwt>=1.4.0",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.37",
]
